--- a/calculadora.html
+++ b/calculadora.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora</title>
+    <link rel="stylesheet" href="stylecalc.css" />
   </head>
   <body>
-    <div>
-      <input type="number" id="num1" placeholder="Ingrese el primer numero" />
-      <input type="number" id="num2" placeholder="Ingrese el segundo numero" />
-      <input type="number" id="num3" placeholder="Ingrese el tercer numero" />
+    <div class="calc">
+      <div class="screen">
+        <input type="number" id="num1" placeholder=" Ingrese numero" />
+        <input type="number" id="num2" placeholder=" Ingrese numero" />
+      </div>
+      <div class="btns">
+        <button class="btn" id="promedio">x̄</button>
+        <button class="btn" id="suma">+</button>
+        <button class="btn" id="resta">-</button>
+        <button class="btn" id="mult">*</button>
+        <button class="btn" id="div">/</button>
+      </div>
+      <div>
+        <h3 id="respuesta"></h3>
+      </div>
     </div>
-    <div>
-      <button id="promedio">Promedio</button>
-    </div>
-    <div>
-      <h3 id="respuesta"></h3>
-    </div>
+
     <script src="calc.js"></script>
   </body>
 </html>
